<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_login"
        style="@style/ToolBar"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_toolbar_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title_login"
                style="@style/ToolBarText"
                android:text="@string/login_header"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_login_heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_15"
        android:layout_marginTop="@dimen/spacing_30"
        android:layout_marginEnd="@dimen/spacing_15"
        android:gravity="center"
        android:text="@string/login_info"
        android:textColor="@color/black1"
        android:textSize="@dimen/font_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_login" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_login_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_15"
        android:layout_marginTop="@dimen/spacing_5"
        android:layout_marginEnd="@dimen/spacing_15"
        android:gravity="center"
        android:text="@string/login_hint"
        android:textColor="@color/black1"
        android:textSize="@dimen/font_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_heading" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_mobile_number"
        style="@style/TextInputLayout"
        app:colorControlActivated="@color/black"
        android:layout_marginStart="@dimen/spacing_15"
        android:layout_marginEnd="@dimen/spacing_15"
        android:layout_marginTop="@dimen/spacing_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_mobile_number"
            style="@style/TextInput"
            android:gravity="center"
            android:hint="@string/mobile_number"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_get_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_15"
        android:background="@drawable/bg_button_authentication"
        android:elevation="@dimen/spacing_4"
        android:letterSpacing="0.2"
        android:text="@string/get_in"
        android:textColor="@color/appText1"
        app:backgroundTint="@color/appColorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/tv_login_sms_charge_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_login_sms_charge_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_15"
        android:layout_marginEnd="@dimen/spacing_15"
        android:layout_marginBottom="@dimen/spacing_15"
        android:gravity="center"
        android:text="@string/login_sms_hint"
        android:textColor="@color/black1"
        android:textSize="@dimen/font_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
