<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_settings_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_settings"
        style="@style/ToolBar"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title_settings"
                style="@style/ToolBarText"
                android:text="@string/settings"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_settings" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_sv_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_25"
                android:fontFamily="sans-serif-medium"
                android:text="@string/messages"
                android:textColor="@color/appColor"
                android:textSize="@dimen/font_18"
                app:layout_constraintBottom_toBottomOf="@+id/iv_messages"
                app:layout_constraintStart_toEndOf="@+id/iv_messages"
                app:layout_constraintTop_toTopOf="@+id/iv_messages" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_25"
                android:fontFamily="sans-serif-medium"
                android:text="@string/privacy"
                android:textColor="@color/appColor"
                android:textSize="@dimen/font_18"
                app:layout_constraintBottom_toBottomOf="@+id/iv_notifications"
                app:layout_constraintStart_toEndOf="@+id/iv_notifications"
                app:layout_constraintTop_toTopOf="@+id/iv_notifications" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_25"
                android:fontFamily="sans-serif-medium"
                android:text="@string/notifications"
                android:textColor="@color/appColor"
                android:textSize="@dimen/font_18"
                app:layout_constraintBottom_toBottomOf="@+id/iv_privacy"
                app:layout_constraintStart_toEndOf="@+id/iv_privacy"
                app:layout_constraintTop_toTopOf="@+id/iv_privacy" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_25"
                android:fontFamily="sans-serif-medium"
                android:text="@string/help"
                android:textColor="@color/appColor"
                android:textSize="@dimen/font_18"
                app:layout_constraintBottom_toBottomOf="@+id/iv_help"
                app:layout_constraintStart_toEndOf="@+id/iv_help"
                app:layout_constraintTop_toTopOf="@+id/iv_help" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="@dimen/spacing_15"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/spacing_15"
                android:background="@color/lightGrey"
                android:elevation="@dimen/spacing_4"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ProfileImage"
                app:srcCompat="@drawable/ic_person_blue" />

            <TextView
                android:id="@+id/tv_profile_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/elon_musk"
                android:textColor="@color/appColor"
                android:textSize="@dimen/font_14"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_profile_image" />

            <ImageView
                android:id="@+id/iv_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_icons"
                android:padding="10dp"
                android:src="@drawable/ic_person"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_profile_name" />


            <ImageView
                android:id="@+id/iv_messages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_icons"
                android:padding="10dp"
                android:src="@drawable/ic_chat_bubble_outline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_account" />

            <ImageView
                android:id="@+id/iv_notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_icons"
                android:padding="10dp"
                android:src="@drawable/ic_lock"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_messages" />

            <ImageView
                android:id="@+id/iv_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_icons"
                android:padding="10dp"
                android:src="@drawable/ic_notifications_outline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_notifications" />

            <ImageView
                android:id="@+id/iv_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_icons"
                android:padding="10dp"
                android:src="@drawable/ic_help_outline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_privacy" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_25"
                android:fontFamily="sans-serif-medium"
                android:text="@string/account"
                android:textColor="@color/appColor"
                android:textSize="@dimen/font_18"
                app:layout_constraintBottom_toBottomOf="@+id/iv_account"
                app:layout_constraintStart_toEndOf="@+id/iv_account"
                app:layout_constraintTop_toTopOf="@+id/iv_account" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_15"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView6"
                app:srcCompat="@drawable/ic_forward" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_15"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                app:srcCompat="@drawable/ic_forward" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_15"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView3"
                app:srcCompat="@drawable/ic_forward" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_15"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                app:srcCompat="@drawable/ic_forward" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_15"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView5"
                app:srcCompat="@drawable/ic_forward" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>